<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logoSodality"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_marginTop="34dp"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_goalee" />

    <TextView
        android:id="@+id/logoName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:letterSpacing="0.1"
        android:fontFamily="@font/quicksand"
        android:text="@string/logoName"
        android:gravity="center"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoSodality" />

    <TextView
        android:id="@+id/firstPageText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/quicksand_light"
        android:gravity="center"
        android:text="@string/firstPageText1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoName" />

    <TextView
        android:id="@+id/firstPageText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/quicksand_light"
        android:text="@string/firstPageText2"
        android:gravity="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstPageText1" />

    <Button
        android:id="@+id/firstPageButton1"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button"
        android:backgroundTint="@color/white"
        android:elevation="1dp"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/firstPageButonText1"
        android:textAllCaps="false"
        android:textColor="@color/grey"
        android:textSize="18sp"
        android:translationZ="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstPageText2" />

    <Button
        android:id="@+id/firstPageButton2"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_button"
        android:backgroundTint="@color/green"
        android:elevation="1dp"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/firstPageButonText2"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:translationZ="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstPageButton1" />



</androidx.constraintlayout.widget.ConstraintLayout>